add todos regarding the definition of graph edit distance and hierarchy

--- a/paper.tex
+++ b/paper.tex
@@ -227,6 +227,7 @@ a strongly connected graph $C_n$.  To each link $(i,j)$ of $A$ associate a non-e
 
 \todo{add panel to \ref{fig:scc} showing that many graphs get mapped to the same SCC DAG}
 
+\todo{add definition of graph edit distance to the most hierarchical network and define this as our measure of hierarchy}
 
 \section{Stability and robustness analysis of particular system ensembles}
 For systems having two components, we can analytically compute the probability of stability and robustness from \ref{eq:condprobgen}. For those having three components, we can estimate these same quantities using Monte Carlo simulations. Systems of larger size can be analyzed using the symmetry properties of robustness extracted from this analysis. For two-component systems having $2 \times 2$ Jacobian matrices, the aforementioned stability criteria result in the conditions $T < 0$ and $D >
@@ -297,6 +298,8 @@ The relationship between connectivity and robustness for two component systems i
 
 % \section{Cycle number and connectivity classify robust systems}
 The combination of connectivity and cycle number as shown in \ref{fig:combined}E provides a better classification of the dependence of robustness upon network topology. Here the robustness of three component systems with a given number of cycles, increases monotonically with connectivity. The network with the highest robustness for three component systems is that of \ref{fig:scc}A. This network is the most hierarchical of all three component systems in the sense that it represents a total ordering of the components of the network and its adjacency matrix also shown in \ref{fig:scc}A has a block triangular structure.
+
+\todo{add description of \ref{fig:scc}D and \ref{fig:scc}F referring to the monotonic correlation between the upper bound of robustness and degree of hierarchy as defined by graph edit distance in a preceeding section}
 
 \section{Component decomposition, hierarchy, and the symmetries of robustness}
 
