--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -1,14 +1,14 @@
 %!TEX root = ../paper.tex
 \begin{figure}[!ht]
 \centering
-\noindent\includegraphics[width=0.6\columnwidth]{fig/examplesystemmodules.pdf}
+\noindent\includegraphics[width=0.4\columnwidth]{fig/examplesystemmodules.pdf}
 \caption{{\bf Example of the combination of open system modules to construct closed systems.} (A) Example of combining two open modules to construct a closed system of two components (B) Analogous example for combining three open modules to construct a closed system with three components}
 \label{fig:examplesystemmodules}
 \end{figure}
 
 \begin{figure}[!ht]
 \centering
-\noindent\includegraphics[width=0.7\columnwidth]{fig/scc.pdf}
+\noindent\includegraphics[width=0.5\columnwidth]{fig/scc2.pdf}
 \caption{{\bf Example of strongly connected components.} (A) - (D) show strongly connected components highlighted in gray for each of the four graphs representing the interdependencies relevant to four different three component systems. Note that the most hierarchical system in (A) has the highest possible number of connected components, three, whereas the system containing a single cycle and therefore posessing no hierarchy contains only one connected component. Systems (B) and (C) represent examples of hierarchical modular systems that posess both modularity and hierarchy.}
 \label{fig:scc}
 \end{figure}
